--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <body>
         <header>
             <h1 id="title">Dj Kaz</h1>
-        </header>
 
-        <nav>
-            
-            <a href="About-dj-kaz">This DJ</a>
-            <a href="Where-i-worked">What it do</a>
-            <a href="Pics-and-videos">Proof</a>
-            <a href="For-more-info">Connect</a>
-        </nav>
-        
+            <nav>
+                <ul>
+                    <li><a href="About-dj-kaz">This DJ</a></li>
+                    <li><a href="Where-i-worked">What I do</a></li>
+                    <li><a href="Pics-and-videos">Proof</a></li>
+                    <li><a href="For-more-info">Connect</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
