--- a/index.html
+++ b/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Dj kaz</title>
-        <link rel="stylesheet" href="assets/style.css">
-    </head>
-    <body>
-        <header>
-            <h1 id="title">Dj Kaz</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>kazu Hishida</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-            <nav>
-                <ul>
-                    <li><a href="About-dj-kaz">This DJ</a></li>
-                    <li><a href="Where-i-worked">What I do</a></li>
-                    <li><a href="Pics-and-videos">Proof</a></li>
-                    <li><a href="For-more-info">Connect</a></li>
-                </ul>
-            </nav>
-        </header>
-    </body>
+  <body>
+    <header class="banner">
+      <div class="upcon">
+        <img
+          src="images/banner.png"
+          style="width: 100%"
+          alt="picture of a dog in the grass"
+        />
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="About-dj-kaz">This DJ</a></li>
+          <li><a href="Where-I-worked">What I do</a></li>
+          <li><a href="Pics-and-videos">Proof</a></li>
+          <li><a href="For-more-info">Connect</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section id="About-dj-kaz">
+        <p>This section will be dedicated to the story behind dj kaz</p>
+      </section>
+
+      <section id="Where-I-worked">
+        <p>
+          This section will be dedicated to what I do as a dj and how I operate
+        </p>
+      </section>
+
+      <section id="Pics-and-videos">
+        <p>This section will host videos and images from shows</p>
+      </section>
+
+      <section id="For-more-info">
+        <p>This section will be information in order to contact and book</p>
+      </section>
+    </main>
+
+    <footer>
+      <h2>More music less noise.</h2>
+      <div>&copy; 2021 DJ Kaz LLC</div>
+    </footer>
+  </body>
 </html>
