more copy added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <section class="About-me">
         <div class="body-images">
             <h2>About me</h2>
-            <p>This section will be dedicated to the story behind dj kaz</p>
+            <p>The beginning. The middle. No end.</p>
             <img
               src="images/beer can.jpg"
               style="width: 100%"
@@ -43,7 +43,7 @@
         <div class="body-images">
             <h2>Work experience</h2>
             <p>
-              This section will be dedicated to what I do as a dj and how I operate
+              From busser to restuarant owner, and from not sure to now here.
             </p>
             <img
               src="images/in her eyes.jpg"
@@ -55,7 +55,7 @@
       <section class="Photography">
         <div class="body-images">
             <h2>Photography</h2>
-            <p>This section will host videos and images from shows</p>
+            <p>For most of my life, I've lived life thru the lens.</p>
             <img
               src="images/dark branches.jpg"
               style="width: 100%"
@@ -66,7 +66,7 @@
       <section class="Digital-work">
         <div class="body-images">
             <h2>Digital Work</h2>
-            <p>This section will host videos and images from shows</p>
+            <p>Some of the things I made that came from 0's and 1's.</p>
             <img
               src="images/dj kaz headphones.jpg"
               style="width: 100%"
@@ -79,7 +79,7 @@
       <section class="More-info">
         <div class="body-images">
             <h2>Contact Information</h2>
-            <p>This section will be information in order to contact and book</p>
+            <p>Need a dj? Photographer? Web designer? Logo maker? Dog walker? Lets talk!</p>
             <img
               src="images/mic in the hand.jpg"
               style="width: 100%"
