added more copy

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <section class="Photography">
         <div class="body-images">
             <h2>Photography</h2>
-            <p>For most of my life, I've lived life thru the lens.</p>
+            <p>I've seen most of my life thru a lens.</p>
             <img
               src="images/dark branches.jpg"
               style="width: 100%"
