--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <section class="Digital-work">
         <div class="body-images">
             <h2>Digital Work</h2>
-            <p>Some of the things I made that came from 0's and 1's.</p>
+            <p>Some of the things I've made, that came from 0's and 1's.</p>
             <img
               src="images/dj kaz headphones.jpg"
               style="width: 100%"
