added movement in links

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         </div>
       <nav>
         <ul>
-          <li><a href="About-me">Me</a></li>
-          <li><a href="Work-experience">My Work</a></li>
-          <li><a href="Photography">My Images</a></li>
-          <li><a href="Digital-work">My Digital</a></li>
-          <li><a href="More-info">My Contact</a></li>
+          <li><a href="#About-me">Me</a></li>
+          <li><a href="#Work-experience">My Work</a></li>
+          <li><a href="#Photography">My Images</a></li>
+          <li><a href="#Digital-work">My Digital</a></li>
+          <li><a href="#More-info">My Contact</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
         
-      <section class="About-me">
+      <section class="About-me" id="About-me">
         <div class="body-images">
             <h2>About me</h2>
             <p>The beginning. The middle. No end.</p>
@@ -39,7 +39,7 @@
             </div>
       </section>
 
-      <section class="Work-experience">
+      <section class="Work-experience" id="Work-experience">
         <div class="body-images">
             <h2>Work experience</h2>
             <p>
@@ -52,7 +52,7 @@
             </div>
       </section>
 
-      <section class="Photography">
+      <section class="Photography" id="Photography">
         <div class="body-images">
             <h2>Photography</h2>
             <p>I've seen most of my life thru a lens.</p>
@@ -63,7 +63,7 @@
             </div>
       </section>
 
-      <section class="Digital-work">
+      <section class="Digital-work" id="Digital-work">
         <div class="body-images">
             <h2>Digital Work</h2>
             <p>Some of the things I've made, that came from 0's and 1's.</p>
@@ -76,7 +76,7 @@
 
 
 
-      <section class="More-info">
+      <section class="More-info" id="More-info">
         <div class="body-images">
             <h2>Contact Information</h2>
             <p>Need a dj? Photographer? Web designer? Logo maker? Dog walker? Lets talk!</p>
