added pages and link

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
               style="width: 100%"
               alt="illustration of dj headphones"/>
             </div>
+
+            <div style="margin: 0 auto; text-align: center">
+            <button  type="button" class="button" onclick="document.location='digital.html'"><span>Digital</span></button>
+            </div>
       </section>
 
 
