--- a/digital.html
+++ b/digital.html
@@ -17,7 +17,7 @@
      </header>
 
      <div style="text-align: center;">
-     <a href="https://brookesemke.github.io/trivia/game.html"><h2>RIDDLE ME THIS...</h2></a>
+     <a href="https://brookesemke.github.io/trivia/"><h2>RIDDLE ME THIS...</h2></a>
     </div>
 
 
