--- a/digital.html
+++ b/digital.html
@@ -20,6 +20,9 @@
      <a href="https://brookesemke.github.io/trivia/"><h2>RIDDLE ME THIS...</h2></a>
     </div>
 
+    <div style="text-align: center;">
+        <a href="www.yaynayz.com"><h2>Yaynayz</h2></a>
+       </div>
 
         <div style="margin: 0 auto; text-align: center">
             <button  type="button" class="button" onclick="document.location='index.html'"><span>Back 2 Home</span></button>
